send data from phone number fragment to validate fragment

--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -23,5 +23,9 @@
             android:id="@+id/action_validateFragment3_to_mainFragment2"
             app:destination="@id/mainFragment2" />
     </fragment>
-
+    <fragment
+        android:id="@+id/mainFragment2"
+        android:name="com.example.pregnancykotlin.login.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" />
 </navigation>
