--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#9C27B0</color>
-    <color name="colorPrimaryDark">#5C6BC0</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#ffffff</color>
     <color name="textColor">#3E3E3E</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="descriptionColor">#D0D0D0</color>
 </resources>
