--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_margin="10dp"
+    android:clickable="true"
     android:foreground="?selectableItemBackground"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
-    app:rippleColor="@color/gray_light">
+    app:rippleColor="@color/colorPrimary">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?selectableItemBackground">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_headerTitle"
@@ -25,7 +25,10 @@
             android:text="@string/testTitle"
             android:textColor="@color/white"
             android:textSize="18dp"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toStartOf="@+id/iv_topic"
+            app:layout_constraintHorizontal_bias="0.91"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
