--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="textColor">#3E3E3E</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="descriptionColor">#D0D0D0</color>
+    <color name="pink_500">#E91E63</color>
+    <color name="teal_500">#009688</color>
+    <color name="purple_500">#673AB7</color>
+    <color name="blue">#009FFD</color>
+    <color name="height">#8AECECEC</color>
 </resources>
