--- a/app/src/main/res/layout/fragment_child_birth.xml
+++ b/app/src/main/res/layout/fragment_child_birth.xml
@@ -15,51 +15,80 @@
         app:cardCornerRadius="15dp"
         app:cardElevation="5dp">
 
-        <LinearLayout
-            android:id="@+id/cl_edd"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/TextAppearance.AppCompat.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+
+            <LinearLayout
+                android:id="@+id/cl_edd"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="right"
-                android:text="@string/Edd_hint"
-                android:textColor="@color/material_on_primary_emphasis_medium"
-                android:textSize="15sp" />
+                android:orientation="vertical">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_dateSelect"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="130dp"
-                android:layout_height="48dp"
+                <TextView
+                    android:id="@+id/textView"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:gravity="right"
+                    android:text="@string/Edd_hint"
+                    android:textColor="@color/material_on_primary_emphasis_medium"
+                    android:textSize="15sp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/bt_dateSelect"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="130dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="7dp"
+                    android:text="انتخاب تاریخ"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:cornerRadius="7dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:strokeColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="5dp"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+
+
+            </LinearLayout>
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_baby2"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="7dp"
-                android:text="انتخاب تاریخ"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                app:cornerRadius="7dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/white" />
+                app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_date"
-                style="@style/TextAppearance.AppCompat.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/white" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
