--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,24 @@
         <item name="font">@font/vazir</item>
         <item name="fontFamily">@font/vazir</item>
     </style>
+
+    <style name="CustomToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <!-- HERE ARE THE CHANGES - Change color of different texts -->
+        <item name="android:textColorPrimary">@color/gray_text_faded</item>
+        <item name="colorControlNormal">@color/teal_500</item>
+        <item name="textColor">@color/teal_500</item>
+        <item name="font">@font/vazir</item>
+        <item name="fontFamily">@font/vazir</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:labelTextSize">12dp</item>
+    </style>
+
+    <style name="CollapsedAppBar" parent="@android:style/TextAppearance">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="ExpandedAppBar" parent="@android:style/TextAppearance">
+        <item name="android:textSize">25sp</item>
+    </style>
 </resources>
